Changed opening path

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "isatis_technical_task",
   "version": "0.1.0",
-  "homepage": "http://localhost:3000/home",
+  "homepage": "http://localhost:3000/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
